[package]
name = "json-node"
version = "0.1.0"
edition = "2021"
lisence = "MIT"
description = "A way to work with JSON as a node tree."
repository = "https://github.com/Skyppex/json-node"
readme = "README.md"
keywords = ["json", "node", "tree", "structure", "data"]
categories = ["data-structures", "parsing", "json"]
exclude = ["/.vscode"]