[package]
name = "json-node"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "A way to work with JSON as a node tree."
repository = "https://github.com/Skyppex/json-node"
readme = "README.md"
keywords = ["json", "node", "tree", "structure", "data"]
categories = ["data-structures", "parsing", "parser-implementations"]
exclude = ["/.vscode"]